# buildroot

./: .b4-config  .checkpackageignore  .clang-format  .confi  .config  .defconfig  .editorconfig  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.in  .gitmodules  .gitpod.Dockerfile  .make.live.CD.USB.Notes.ic.lmy  CHANGES  Config.in  Config.in.legacy  DEVELOPERS  Jenkinsfile  Makefile  README  README.md  SECURITY.md  build.sh  build_script.sh  buildroot_config_BT  buildroot_config_PHP  config.D700  cpeCheck.py  iperf  linux_kernel_config  mv_stuff.sh  raspberrypi3_wifi_bt_defconfig  raspberrypi3_wpe_ml_wifi_bt_defconfig  rebuild.sh  update_from_master.sh
.github/: README.md  build  pull_request_template.md
.github/workflows/: autofill_release.yml  build-ot-firmware.yml  buildroot.yml  codeql-analysis.yml  fill_release.yml  main.yml  pizerow-dev-build.yml  release.yml  repo-lockdown.yml  seeed_reComputer_R100x_buildroot.yml  seeed_reComputer_R110x_buildroot.yml  seeed_reterminal_buildroot.yml  sync-with-upstream.yml  sync_upstream.yml
.gitlab/issue_templates/: default.md
arch/: Config.in  Config.in.arc  Config.in.arm  Config.in.csky  Config.in.hppa  Config.in.loongarch  Config.in.m68k  Config.in.microblaze  Config.in.mips  Config.in.nds32  Config.in.nios2  Config.in.or1k  Config.in.powerpc  Config.in.riscv  Config.in.s390x  Config.in.sh  Config.in.sparc  Config.in.x86  Config.in.xtensa  arch.mk  arch.mk.arc  arch.mk.hppa  arch.mk.riscv  arch.mk.xtensa
board/aarch64-efi/: genimage-efi.cfg  grub.cfg  linux-pmem-netboot.fragment  post-image.sh  readme.txt
boot/: Config.in
configs/: aarch64_efi_defconfig  acmesystems_acqua_a5_256mb_defconfig  acmesystems_acqua_a5_512mb_defconfig  acmesystems_aria_g25_128mb_defconfig  acmesystems_aria_g25_256mb_defconfig  acmesystems_arietta_g25_128mb_defconfig  acmesystems_arietta_g25_256mb_defconfig  am574x_idk_defconfig  amarula_vyasa_rk3288_defconfig  andes_ae300_defconfig  andes_ae350_45_defconfig  arcturus_ucls1012a_defconfig  arcturus_ucp1020_defconfig  arm_foundationv8_defconfig  arm_fvp_ebbr_defconfig  armadeus_apf27_defconfig  armadeus_apf28_defconfig  armadeus_apf51_defconfig  arrisrdk_wpe_ml_defconfig  arrisrdkb0_wpe_ml_defconfig  aspeed_ast2500evb_defconfig  aspeed_ast2600evb_defconfig  asus_tinker-s_rk3288_defconfig  asus_tinker_rk3288_defconfig  at91sam9260eknf_defconfig  at91sam9g20dfc_defconfig  at91sam9g45m10ek_defconfig  at91sam9rlek_defconfig  at91sam9x5ek_defconfig  at91sam9x5ek_dev_defconfig  at91sam9x5ek_mmc_defconfig  at91sam9x5ek_mmc_dev_defconfig  atmel_sama5d27_som1_ek_mmc_dev_defconfig  atmel_sama5d2_xplained_mmc_defconfig  atmel_sama5d2_xplained_mmc_dev_defconfig  atmel_sama5d3_xplained_defconfig  atmel_sama5d3_xplained_dev_defconfig  atmel_sama5d3_xplained_mmc_defconfig  atmel_sama5d3_xplained_mmc_dev_defconfig  atmel_sama5d3xek_defconfig  (+478 more)
custom-scripts/: S41network-config  pre-build.sh  qemu-ifup
fs/: Config.in  common.mk
httpServer/: cpustat.py  httpServer.py
iperf-2.1.8/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
iperf-2.1.8/compat/: Makefile  Makefile.am  Makefile.in  Thread.c  delay.c  error.c  gettcpinfo.c  gettimeofday.c  inet_ntop.c  inet_pton.c  signal.c  snprintf.c  string.c
iperf-2.1.8/compat/.deps/: Thread.Po  delay.Po  error.Po  gettcpinfo.Po  gettimeofday.Po  inet_ntop.Po  inet_pton.Po  signal.Po  snprintf.Po  string.Po
iperf-2.1.8/doc/: Makefile  Makefile.in  index.html  ui_license.html
iperf-2.1.8/include/: Client.hpp  Condition.h  Extractor.h  Listener.hpp  Locale.h  Makefile  Makefile.am  Makefile.in  Mutex.h  PerfSocket.hpp  Reporter.h  Server.hpp  Settings.hpp  SocketAddr.h  Thread.h  Timestamp.hpp  active_hosts.h  checksums.h  config.win32.h  delay.h  dscp.h  gettcpinfo.h  gettimeofday.h  gnu_getopt.h  headers.h  histogram.h  inet_aton.h  isochronous.hpp  packet_ring.h  payloads.h  pdfs.h  service.h  util.h  version.h
iperf-2.1.8/m4/: ax_pthread.m4  dast.m4
iperf-2.1.8/man/: Makefile  Makefile.am  Makefile.in  iperf.1
iperf-2.1.8/src/: Client.cpp  Extractor.c  Launch.cpp  Listener.cpp  Locale.c  Makefile  Makefile.am  Makefile.in  PerfSocket.cpp  ReportOutputs.c  Reporter.c  Reports.c  Server.cpp  Settings.cpp  SocketAddr.c  active_hosts.cpp  checkdelay.c  checkisoch.cpp  checkpdfs.c  checksums.c  dscp.c  gnu_getopt.c  histogram.c  igmp_querier.c  iperf  isochronous.cpp  main.cpp  packet_ring.c  pdfs.c  service.c  socket_io.c  stdio.c  tcp_window_size.c
iperf-2.1.8/src/.deps/: Client.Po  Extractor.Po  Launch.Po  Listener.Po  Locale.Po  PerfSocket.Po  ReportOutputs.Po  Reporter.Po  Reports.Po  Server.Po  Settings.Po  SocketAddr.Po  active_hosts.Po  checksums.Po  dscp.Po  gnu_getopt.Po  gnu_getopt_long.Po  histogram.Po  isochronous.Po  main.Po  packet_ring.Po  pdfs.Po  service.Po  socket_io.Po  stdio.Po  tcp_window_size.Po
iperf-2.1.8/t/: base.sh  t10_dualtest.sh  t11_tradeoff.sh  t12_full_duplex.sh  t13_reverse.sh  t1_tcp.sh  t2_tcp6.sh  t3_udp.sh  t4_udp6.sh  t5_f.sh  t6_filelong.sh  t7_n.sh  t8_num.sh  t9_parallel.sh
kernelconfigs/: raspberrypi0.frag
linux/: 0002-use-after-free-realloc.patch  5.10.246-cip66  6.19.10  Config.ext.in  Config.in  linux.hash  linux.mk
package/: Config.in  Config.in.host  Makefile.in  doc-asciidoc.mk  pkg-autotools.mk  pkg-cargo.mk  pkg-cmake.mk  pkg-download.mk  pkg-generic.mk  pkg-golang.mk  pkg-kconfig.mk  pkg-kernel-module.mk  pkg-luarocks.mk  pkg-meson.mk  pkg-python.mk  pkg-qmake.mk  pkg-rebar.mk  pkg-utils.mk  pkg-virtual.mk  pkg-waf.mk  simple-opkg-tools.mk
script/: fakeroot_script.sh
system/: Config.in  device_table.txt  system.mk
toolchain/: Config.in  helpers.mk  toolchain-common.in  toolchain-wrapper.c  toolchain-wrapper.mk  toolchain.mk
utils/: add-custom-hashes  brmake  bump-stable-kernel-versions  check-package  check-symbols  config  diffconfig  docker-run  generate-cyclonedx  genrandconfig  get-developers  getdeveloperlib.py  readme.txt  scancpan  scanpypi  size-stats-compare  test-pkg  update-rust
(+16696 files in other folders)
